# Lovable-Analytics-Hack

./: .coveragerc  .gitignore  .pre-commit-config.yaml  bot.py  config.example.json  config.py  pyproject.toml  pytest.ini  readme.rst  requirements.txt  run_tests.sh
.github/workflows/: docs.yml  simulate_traffic.yml  tests.yml
chrome_profile/: ChromeFeatureState  Local State
chrome_profile/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Persistent State  Preferences  Secure Preferences  Top Sites  TransportSecurity  Visited Links  Web Data
chrome_profile/Default/Cache/Cache_Data/: 0c0bd780b9d50dc1_0  0ffcef849c686698_0  50d2aec36d33f38a_0  75caf75059ef87e7_0  935d49a8d0999347_0  992b7562b07b5466_0  e73febbe8c877f33_0
chrome_profile/Default/Cache/Cache_Data/index-dir/: the-real-index
chrome_profile/Default/Code Cache/js/: 53e70a237f1802ad_0  64e36c69cc8a2571_0  6ad5e5b94db346fc_0
chrome_profile/Default/Code Cache/js/index-dir/: the-real-index
chrome_profile/Default/Code Cache/wasm/index-dir/: the-real-index
chrome_profile/Default/DawnGraphiteCache/: data_1  index
chrome_profile/Default/DawnWebGPUCache/: data_1  index
chrome_profile/Default/Extension Rules/: LOG
chrome_profile/Default/Extension Scripts/: LOG
chrome_profile/Default/Extension State/: LOG  LOG.old
chrome_profile/Default/GCM Store/Encryption/: LOG  LOG.old
chrome_profile/Default/GPUCache/: data_0  data_1  data_2  index
chrome_profile/Default/Local Storage/leveldb/: LOG  LOG.old
chrome_profile/Default/Session Storage/: LOG  LOG.old
chrome_profile/Default/Sessions/: Session_13408020681711397  Session_13408020797820716  Tabs_13408020682091374  Tabs_13408020798292330
chrome_profile/Default/Shared Dictionary/cache/index-dir/: the-real-index
chrome_profile/Default/Site Characteristics Database/: LOG  LOG.old
chrome_profile/Default/Sync Data/LevelDB/: LOG  LOG.old
chrome_profile/Default/WebStorage/: QuotaManager
chrome_profile/Default/shared_proto_db/: LOG  LOG.old
chrome_profile/Default/shared_proto_db/metadata/: LOG  LOG.old
chrome_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000023  f_000024  f_000025  f_000026  f_000027  (+20 more)
chrome_profile/GraphiteDawnCache/: data_1  index
chrome_profile/ShaderCache/: data_1  index
chrome_profile/segmentation_platform/: ukm_db  ukm_db-journal
docs/: README.md  conf.py  index.rst  modules.rst
docs/_static/: .gitkeep
src/fake_analytics/: actions.py  cli.py  config.py  core.py  data.py  discovery.py  geo_utils.py  logger.py
tests/: README.md  conftest.py
tests/e2e/: test_cli.py  test_discovery.py  test_traffic_bot.py
tests/integration/: test_installed_cli.py  test_real_discovery.py  test_real_traffic_bot.py
tests/unit/: test_actions.py  test_config.py  test_data.py  test_logger.py
